# larecomp

./: .gitignore  CMakeLists.txt  CMakePresets.json  larecomp_config.toml  larecomp_manifest.toml
src/: crash_handler.cpp  larecomp_app.h  larecomp_log.h  main.cpp  rex_macros.h  spdlog_console.cpp  stubs.cpp
src/discord_rpc/: discord_hooks.cpp  discord_rpc.cpp  discord_rpc.h
src/mc_engine/: graphics_button.cpp  graphics_button.h  hooks.cpp  hooks.h  logging.h  threading.cpp  threading.h
src/spdlog/: crash_handler.cpp  crash_handler.h  spdlog_console.cpp  spdlog_console.h
